--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.15",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
+    "pm2": "^3.4.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-meta": "^1.5.8",
