--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.11",
     "pm2": "^3.4.0",
     "register-service-worker": "^1.6.2",
+    "sass": "^1.42.1",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.6",
     "vue-meta": "^1.5.8",
